package com.parkview.parkview.processing

import com.parkview.parkview.git.BenchmarkResult

/**
 * This class takes care of processing and storing raw benchmark results
 */
class DataProcessor {
    /**
     * Processes and stores raw benchmark results.
     *
     * @param results raw benchmark results that will be stored
     */
    fun storeBenchmarkResults(results: List<BenchmarkResult>) {
        TODO("Not yet implemented")
    }


}